--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title></title>
-  <script type="text/javascript" src="./site.js"></script>
+  <title>Seat randomizer</title>
+  <script src="site.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  nice frontend;
-</body>
-</html>
 
-<style>
-  html {
-    background-color: black;
-    color: white;
-  }
-</style>
+<body>
+  <h1>Seat randomizer</h1>
+  
+  <div id="tablegrid"></div>
+
+  <button id="scramblebtn" type="button" onclick="scramble()">Scramble</button>
+</body>
+
+</html>
