--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <h1>Seat randomizer</h1>
+  <!-- <h1>Seat randomizer</h1> -->
   
   <div id="tablegrid"></div>
 
-  <button id="scramblebtn" type="button" onclick="scramble()">Scramble</button>
+  <!-- <button id="scramblebtn" type="button" onclick="scramble()">Scramble</button> -->
 </body>
 
 </html>
